// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "id": "0x20000b9b01e93a39db9d286e9264eff7f2af16e9",
  "incentivesData": Array [
    Object {
      "asset": Object {
        "emissionPerSecond": 0,
        "id": "0xd800e97ae32b06c1e89ca5126c7bf6aef89d6b240xd800e97ae32b06c1e89ca5126c7bf6aef89d6b24",
        "index": 0,
      },
      "lastUpdateTimestamp": 1641228846,
      "lifetimeRewards": "1545.269812517967062645",
      "reward": "1545.269812517967062645",
    },
  ],
  "loansData": Array [
    Object {
      "availableToBorrow": "12.847524450180423118",
      "availableToBorrowETH": "12.847524450180423118",
      "availableToBorrowUSD": "54615.8336438",
      "bidBorrowAmount": "2.032475549819576882",
      "bidPrice": "2.132475549819576882",
      "bidStartTimestamp": "1642216645",
      "bidderAddress": "0x20000b9b01e93a39db9d286e9264eff7f2af16e9",
      "borrower": "0x20000b9b01e93a39db9d286e9264eff7f2af16e9",
      "currentAmount": "2.032475549819576882",
      "currentAmountETH": "2.032475549819576882",
      "currentAmountUSD": "8640.21290206",
      "healthFactor": "21.96336384167706154501",
      "id": "50xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
      "lastUpdateTimestamp": 1641216645,
      "loanId": "5",
      "nftAsset": Object {
        "id": "0x74e4418a41169fb951ca886976ccd8b36968c4ab0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
        "lastUpdateTimestamp": 1642218270,
        "name": "Wrapped Cryptopunks",
        "symbol": "WPUNKS",
        "underlyingAsset": "0x74e4418a41169fb951ca886976ccd8b36968c4ab",
      },
      "nftTokenId": "1337",
      "reserveAsset": Object {
        "decimals": 18,
        "id": "0xad1908f909b5c5d2b1032a215d611773f26f089f0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
        "lastUpdateTimestamp": 1642311951,
        "name": "Wrapped Ether",
        "symbol": "WETH",
        "underlyingAsset": "0xad1908f909b5c5d2b1032a215d611773f26f089f",
      },
      "scaledAmount": "2.012908826592418942",
      "state": "Auction",
    },
  ],
  "nftsData": Array [
    Object {
      "nftAsset": Object {
        "id": "0x74e4418a41169fb951ca886976ccd8b36968c4ab0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
        "lastUpdateTimestamp": 1642218270,
        "name": "Wrapped Cryptopunks",
        "symbol": "WPUNKS",
        "underlyingAsset": "0x74e4418a41169fb951ca886976ccd8b36968c4ab",
      },
      "totalCollateral": "3",
      "underlyingCollateralETH": "148.8",
      "underlyingCollateralUSD": "632560.46545872",
    },
  ],
  "reservesData": Array [
    Object {
      "reserve": Object {
        "decimals": 18,
        "id": "0xad1908f909b5c5d2b1032a215d611773f26f089f0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
        "lastUpdateTimestamp": 1642159201,
        "name": "Wrapped Ether",
        "symbol": "WETH",
        "underlyingAsset": "0xad1908f909b5c5d2b1032a215d611773f26f089f",
      },
      "scaledBTokenBalance": "1.119602730417571034",
      "scaledVariableDebt": "2.012908826592418942",
      "totalBorrows": "2.096644626429035316",
      "totalBorrowsETH": "2.096644626429035316",
      "totalBorrowsUSD": "8913.00067738",
      "underlyingBalance": "1.159297638269989947",
      "underlyingBalanceETH": "1.159297638269989947",
      "underlyingBalanceUSD": "4928.26514562",
      "variableBorrowIndex": "1.01007509787777865131",
    },
  ],
  "totalBorrowsETH": "4.129120176248612198",
  "totalBorrowsUSD": "17553.21357945",
  "totalCollateralETH": "148.8",
  "totalCollateralUSD": "632560.46545872",
  "totalLiquidityETH": "1.159297638269989947",
  "totalLiquidityUSD": "4928.26514562",
  "totalRewards": "1545.269812517967062645",
}
`;

exports[`computations and formattings formatLoans should allow omitting timestamp 1`] = `
Object {
  "availableToBorrow": "12.847524450180423118",
  "availableToBorrowETH": "12.847524450180423118",
  "availableToBorrowUSD": "54615.8336438",
  "bidBorrowAmount": "2.032475549819576882",
  "bidPrice": "2.132475549819576882",
  "bidStartTimestamp": "1642216645",
  "bidderAddress": "0x20000b9b01e93a39db9d286e9264eff7f2af16e9",
  "borrower": "0x20000b9b01e93a39db9d286e9264eff7f2af16e9",
  "currentAmount": "2.032475549819576882",
  "currentAmountETH": "2.032475549819576882",
  "currentAmountUSD": "8640.21290206",
  "healthFactor": "21.96336384167706154501",
  "id": "50xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
  "lastUpdateTimestamp": 1641216645,
  "loanId": "5",
  "nftAsset": Object {
    "id": "0x74e4418a41169fb951ca886976ccd8b36968c4ab0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
    "lastUpdateTimestamp": 1642218270,
    "name": "Wrapped Cryptopunks",
    "symbol": "WPUNKS",
    "underlyingAsset": "0x74e4418a41169fb951ca886976ccd8b36968c4ab",
  },
  "nftTokenId": "1337",
  "reserveAsset": Object {
    "decimals": 18,
    "id": "0xad1908f909b5c5d2b1032a215d611773f26f089f0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
    "lastUpdateTimestamp": 1642311951,
    "name": "Wrapped Ether",
    "symbol": "WETH",
    "underlyingAsset": "0xad1908f909b5c5d2b1032a215d611773f26f089f",
  },
  "scaledAmount": "2.012908826592418942",
  "state": "Auction",
}
`;

exports[`computations and formattings formatLoans should return plausible results 1`] = `
Object {
  "availableToBorrow": "12.847524450180423118",
  "availableToBorrowETH": "12.847524450180423118",
  "availableToBorrowUSD": "54615.8336438",
  "bidBorrowAmount": "2.032475549819576882",
  "bidPrice": "2.132475549819576882",
  "bidStartTimestamp": "1642216645",
  "bidderAddress": "0x20000b9b01e93a39db9d286e9264eff7f2af16e9",
  "borrower": "0x20000b9b01e93a39db9d286e9264eff7f2af16e9",
  "currentAmount": "2.032475549819576882",
  "currentAmountETH": "2.032475549819576882",
  "currentAmountUSD": "8640.21290206",
  "healthFactor": "21.96336384167706154501",
  "id": "50xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
  "lastUpdateTimestamp": 1641216645,
  "loanId": "5",
  "nftAsset": Object {
    "id": "0x74e4418a41169fb951ca886976ccd8b36968c4ab0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
    "lastUpdateTimestamp": 1642218270,
    "name": "Wrapped Cryptopunks",
    "symbol": "WPUNKS",
    "underlyingAsset": "0x74e4418a41169fb951ca886976ccd8b36968c4ab",
  },
  "nftTokenId": "1337",
  "reserveAsset": Object {
    "decimals": 18,
    "id": "0xad1908f909b5c5d2b1032a215d611773f26f089f0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
    "lastUpdateTimestamp": 1642311951,
    "name": "Wrapped Ether",
    "symbol": "WETH",
    "underlyingAsset": "0xad1908f909b5c5d2b1032a215d611773f26f089f",
  },
  "scaledAmount": "2.012908826592418942",
  "state": "Auction",
}
`;

exports[`computations and formattings formatNfts should allow omitting timestamp 1`] = `
Object {
  "auctionDuration": "2",
  "availableToBorrowETH": "14.88",
  "baseLTVasCollateral": "0.3",
  "bnftAddress": "0x8894215794f196018324d191a03ef987a617eb01",
  "id": "0x74e4418a41169fb951ca886976ccd8b36968c4ab0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
  "isActive": true,
  "isFrozen": false,
  "lastUpdateTimestamp": 1642218270,
  "liquidationBonus": "0.05",
  "liquidationThreshold": "0.9",
  "name": "Wrapped Cryptopunks",
  "price": Object {
    "priceInEth": "49.6",
  },
  "redeemDuration": "2",
  "redeemFine": "0.01",
  "symbol": "WPUNKS",
  "totalCollateral": "37",
  "underlyingAsset": "0x74e4418a41169fb951ca886976ccd8b36968c4ab",
}
`;

exports[`computations and formattings formatNfts should return plausible results 1`] = `
Object {
  "auctionDuration": "2",
  "availableToBorrowETH": "14.88",
  "baseLTVasCollateral": "0.3",
  "bnftAddress": "0x8894215794f196018324d191a03ef987a617eb01",
  "id": "0x74e4418a41169fb951ca886976ccd8b36968c4ab0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
  "isActive": true,
  "isFrozen": false,
  "lastUpdateTimestamp": 1642218270,
  "liquidationBonus": "0.05",
  "liquidationThreshold": "0.9",
  "name": "Wrapped Cryptopunks",
  "price": Object {
    "priceInEth": "49.6",
  },
  "redeemDuration": "2",
  "redeemFine": "0.01",
  "symbol": "WPUNKS",
  "totalCollateral": "37",
  "underlyingAsset": "0x74e4418a41169fb951ca886976ccd8b36968c4ab",
}
`;

exports[`computations and formattings formatReserves should allow omitting timestamp 1`] = `
Object {
  "availableLiquidity": "30176110452260548839",
  "avg30DaysLiquidityRate": undefined,
  "avg30DaysVariableBorrowRate": undefined,
  "bTokenAddress": "0x1bbce5469b8bcc5078ae2398476350936d1393af",
  "baseVariableBorrowRate": "0",
  "borrowingEnabled": true,
  "debtTokenAddress": "0xe42f3a56f89546a2596b88cff08234c5eea304b7",
  "decimals": 18,
  "id": "0xad1908f909b5c5d2b1032a215d611773f26f089f0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
  "isActive": true,
  "isFrozen": false,
  "lastUpdateTimestamp": 1642159201,
  "liquidityAPY": "0.73322327835433494494",
  "liquidityIndex": "1.03541834282012424654",
  "liquidityRate": "0.54998284644218217077",
  "name": "Wrapped Ether",
  "optimalUtilisationRate": "650000000000000000000000000",
  "price": Object {
    "priceInEth": "1",
  },
  "reserveFactor": "0.1",
  "symbol": "WETH",
  "totalDebt": "198.982640816212378612",
  "totalLiquidity": "229.158751268472927451",
  "totalScaledVariableDebt": "191.044198058136805282",
  "totalVariableDebt": "198.982640816212378612",
  "underlyingAsset": "0xad1908f909b5c5d2b1032a215d611773f26f089f",
  "utilizationRate": "0.86831787882755800028",
  "variableBorrowAPY": "1.02134950518465855846",
  "variableBorrowIndex": "1.04155291204216429422",
  "variableBorrowRate": "0.70376536807873714367",
  "variableRateSlope1": "80000000000000000000000000",
  "variableRateSlope2": "1000000000000000000000000000",
}
`;

exports[`computations and formattings formatReserves should return plausible results 1`] = `
Object {
  "availableLiquidity": "30176110452260548839",
  "avg30DaysLiquidityRate": undefined,
  "avg30DaysVariableBorrowRate": undefined,
  "bTokenAddress": "0x1bbce5469b8bcc5078ae2398476350936d1393af",
  "baseVariableBorrowRate": "0",
  "borrowingEnabled": true,
  "debtTokenAddress": "0xe42f3a56f89546a2596b88cff08234c5eea304b7",
  "decimals": 18,
  "id": "0xad1908f909b5c5d2b1032a215d611773f26f089f0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
  "isActive": true,
  "isFrozen": false,
  "lastUpdateTimestamp": 1642159201,
  "liquidityAPY": "0.73322327835433494494",
  "liquidityIndex": "1.03541834282012424654",
  "liquidityRate": "0.54998284644218217077",
  "name": "Wrapped Ether",
  "optimalUtilisationRate": "650000000000000000000000000",
  "price": Object {
    "priceInEth": "1",
  },
  "reserveFactor": "0.1",
  "symbol": "WETH",
  "totalDebt": "198.991522108389090691",
  "totalLiquidity": "229.16763256064963953",
  "totalScaledVariableDebt": "191.044198058136805282",
  "totalVariableDebt": "198.991522108389090691",
  "underlyingAsset": "0xad1908f909b5c5d2b1032a215d611773f26f089f",
  "utilizationRate": "0.86832298211103444039",
  "variableBorrowAPY": "1.02134950518465855846",
  "variableBorrowIndex": "1.04155291204216429422",
  "variableBorrowRate": "0.70376536807873714367",
  "variableRateSlope1": "80000000000000000000000000",
  "variableRateSlope2": "1000000000000000000000000000",
}
`;
